Adiciona teste de carga
